Replaced CompileException with CompilerMessage.  Enabled capturing multiple error messages.  Attempts to continue parsing after an error.  Made ASTLiteral a sealed interface.  Removed unneeded AmbiguousName.  Updated test cases.